feat(market): 为应用市场添加开源/闭源设置功能
- 在发布应用时添加开源设置开关，支持选择开源或闭源
- 闭源应用在详情页隐藏代码结构，防止代码被查看和使用
- 更新数据库表结构，添加is_open_source字段
- 重构Java Map创建代码以兼容旧版本JDK
- 更新README文档，记录新功能并升级版本号至v0.2.0